# adl-robot

./: README.md  package-lock.json
backend/: app.py  camera_test.html  requirements.txt  stream_viewer.html
backend/routes/: camera.py  tasks.py  voice.py
backend/services/: action_mapper.py  camera_stream.py  ros_subscriber.py  voice_parsers.py
mobile/: ROS_INTEGRATION.md  app.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/app/: _layout.tsx  index.tsx  task.tsx
mobile/app/task/: 1.tsx  2.tsx  3.tsx  [id].tsx
mobile/components/: CameraStream.tsx  VoiceButton.tsx
mobile/components/tasks/: TaskStep.tsx
mobile/config/: backend.ts
mobile/contexts/: RosContext.tsx  TaskContext.tsx
mobile/hooks/: useTaskWebSocket.ts
mobile/ios/starterkitexpo/: Info.plist
mobile/ios/starterkitexpo.xcodeproj/: project.pbxproj
mobile/types/: tasks.ts
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/adl_robot/lib/adl_robot/: adl_coordinator  aruco_detector  kinova_controller  object_pickup_service
ros2_ws/install/adl_robot/share/adl_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/adl_robot/: README.md  setup.cfg  setup.py
ros2_ws/src/adl_robot/adl_robot/: adl_coordinator.py  aruco_detector.py  kinova_controller.py  object_pickup_service.py
ros2_ws/src/adl_robot/config/: adl_robot_config.yaml
ros2_ws/src/adl_robot/launch/: adl_robot.launch.py  aruco_detection_only.launch.py
ros2_ws/src/adl_robot/msg/: DetectedObject.msg  DetectedObjectArray.msg
ros2_ws/src/adl_robot/srv/: PickupObject.srv  PlaceObject.srv
(+1 files in other folders)
