<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adl_robot</name>
  <version>0.0.0</version>
  <description>ADL Robot package for object detection and manipulation using ArUco markers</description>
  <maintainer email="tripham@todo.todo">tripham</maintainer>
  <license>MIT</license>

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Camera and image processing -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>realsense2_camera</depend>
  
  <!-- ArUco detection -->
  <depend>aruco_msgs</depend>
  
  <!-- Manipulation and control -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <!-- Custom messages and services -->
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  
  <!-- Build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
